--- a/Build_IT_Web/ClientApp/src/assets/locale/pl.json
+++ b/Build_IT_Web/ClientApp/src/assets/locale/pl.json
@@ -294,6 +294,7 @@
   },
 
   "scriptCalculator": {
+    "Clean":  "Wyczyść",
     "StaticData": "Stałe",
     "Calculate": "Oblicz",
     "Results": "Wyniki",
