--- a/Build_IT_Web/ClientApp/src/assets/locale/en.json
+++ b/Build_IT_Web/ClientApp/src/assets/locale/en.json
@@ -294,6 +294,7 @@
   },
 
   "scriptCalculator": {
+    "Clean": "Clean",
     "StaticData": "Static data",
     "Calculate": "Calculate",
     "Results": "Results",
