Test data - repaired an error with optional parameters

--- a/Build_IT_Web/ClientApp/src/assets/locale/de.json
+++ b/Build_IT_Web/ClientApp/src/assets/locale/de.json
@@ -296,6 +296,9 @@
         "Remove": "Remove"
       }
     },
+    "TestData": {
+      "Header": "Test data"
+    },
 
     "Translations": {
       "Header": "Translations",
